--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --primary:rgb(103,217,184); /*#67d9b8*/
+}
+
 .navbar {
   position: relative;
 }
@@ -5,9 +9,7 @@
 .text-green { color: var(--green) !important; }
 .text-white { color: var(--white) !important; }
 .text-theme { color: #67d9b8 !important; }
-.full-height {
-  height: 100%;
-}
+
 .super-center {
   position: relative;
   width: 200px;
@@ -17,18 +19,16 @@
   margin: -25px 0 0 -100px;
 }
 .overflow-none { overflow: none; }
+
 input:hover, input:active, input:focus {
   background-color: var(--white);
 }
-.shadow, .hover-shadow:hover {
-  box-shadow: 0 0 8px 5px #efefef;
+.hover-shadow:hover{box-shadow: 0 0 8px 5px rgba(0,0,0,.15);}
+
+.text-nounderline, .text-nounderline:hover, .text-nounderline:focus  {
+  text-decoration: none;
 }
-.button-small {
-  font-size: .75em;
-  height: 3rem;
-  padding: 0 1em;
-  line-height: 2.8rem;
-}
+
 ul.column,ol.column {
   -moz-column-count: 2;
   -moz-column-gap: 10px;
@@ -37,18 +37,12 @@ ul.column,ol.column {
   column-count: 2;
   column-gap: 10px;
 }
-.dropdown-body {
-  font-size: initial;
-  font-weight: initial;
-  line-height: initial;
-  letter-spacing: initial;
-  text-transform: initial;
-}
+
 .background-solid-theme, hover-background-solid-theme:hover {
   background-color: #67d9b8;
 }
 .background-transparent { background: transparent; }
-.text-capitalize { text-transform: capitalize; }
+
 .text-lightgrey { color: #fafafa; }
 .text-grey { color: #d3d3d3; }
 .text-darkgrey { color: #8c8c8c; }
@@ -74,9 +68,6 @@ ul.column,ol.column {
   background-image: linear-gradient(180deg, var(--white) 50%, #fafafa 100%);
 }
 
-.button-blue-outline { background: transparent; color: var(--blue); }
-.button-red-outline { background: transparent; color: var(--red); }
-.button-green-outline { background: transparent; color: var(--green); }
 .button-white{
   color:var(--black);background-color:var(--white);border-color:var(--white);
 }
